Adding content to the website and a profile picture

--- a/index.html
+++ b/index.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My</title>
+    <title>Will's Profile</title>
 </head>
 <body>
-    
+    <h1>Will's Profile</h1>
+    <hr>
+    <h2>My name is Will, I'm a CS major at UMD</h2>
+    <p>Some things im interested in include:</p>
+    <ul>
+        <li>Ultimate Frisbee</li>
+        <li>Coding and Web development</li>
+        <li>Video games such as Valorant and Celeste</li>
+        <li>Hiking</li>
+    </ul>
+    <img src="PFP.jpg" alt="profile picture">
 </body>
 </html>
