css homework part 1

--- a/index.html
+++ b/index.html
@@ -3,19 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Will's Profile</title>
+    <title>Will Graham | Profile</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Will's Profile</h1>
+    <div class="header">
+        <img class="pfp" src="PFP.jpg" alt="profile picture">
+        <div class="personal-info">
+            <h1>Will Graham</h1>
+            <h2>Computer Science Major at The University of Maryland | Web Developer</h2>
+            <img class="githubimg" src="https://img.icons8.com/ios-filled/50/github.png" alt="github"/>
+            <img class="linkedinimg" src="https://img.icons8.com/ios-glyphs/30/linkedin-2--v2.png" alt="linkedin-2--v2"/>
+        </div>
+    </div>
+    <div class="content"></div>
+    <div class="footer"></div>
+
     <hr>
     <h2>My name is Will, I'm a CS major at UMD</h2>
     <p>Some things im interested in include:</p>
     <ul>
         <li>Ultimate Frisbee</li>
         <li>Coding and Web development</li>
-        <li>Video games such as Valorant and Celeste</li>
+        <li>Video games such as Valorant and Celeste</sli>
         <li>Hiking</li>
     </ul>
-    <img src="PFP.jpg" alt="profile picture">
 </body>
 </html>
