--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Will Graham | Profile</title>
+    <!-- <link rel="icon" type="image/x-icon" href="PFP.jpg"> -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,22 +12,43 @@
         <img class="pfp" src="PFP.jpg" alt="profile picture">
         <div class="personal-info">
             <h1>Will Graham</h1>
-            <h2>Computer Science Major at The University of Maryland | Web Developer</h2>
-            <img class="githubimg" src="https://img.icons8.com/ios-filled/50/github.png" alt="github"/>
-            <img class="linkedinimg" src="https://img.icons8.com/ios-glyphs/30/linkedin-2--v2.png" alt="linkedin-2--v2"/>
+            <h2>Computer Science Major at The University of Maryland</h2>
+            <a href="https://github.com/WillGraham36"target="_blank"><img class="githubimg" src="https://img.icons8.com/ios-filled/50/github.png" alt="github"/></a>
+            <a href="https://linkedin.com/in/will-graham-4623022a8" target="_blank"><img class="linkedinimg" src="https://img.icons8.com/ios-glyphs/30/linkedin-2--v2.png" alt="linkedin-2--v2"/></a>
         </div>
     </div>
-    <div class="content"></div>
-    <div class="footer"></div>
+    <div class="content">
+        <div class="primary-col">
+            <div class="about-me">
+                <h2>About me</h2>
+            </div>
+            <div class="projects">
+                <h2>Personal Projects</h2>
+            </div>
+            <div class="experience">
+                <h2>Experience</h2>
+            </div>
+        </div>
 
-    <hr>
-    <h2>My name is Will, I'm a CS major at UMD</h2>
-    <p>Some things im interested in include:</p>
-    <ul>
-        <li>Ultimate Frisbee</li>
-        <li>Coding and Web development</li>
-        <li>Video games such as Valorant and Celeste</sli>
-        <li>Hiking</li>
-    </ul>
+        <div class="side-col">
+            <div class="education">
+                <h2>Education</h2>
+            </div>
+            <div class="languages">
+                <h2>Languages</h2>
+            </div>
+        </div>
+    </div>
+    <div class="footer"></div>
 </body>
 </html>
+
+<!--         
+    <h2>My name is Will, I'm a CS major at UMD</h2>
+        <p>Some things im interested in include:</p>
+        <ul>
+            <li>Ultimate Frisbee</li>
+            <li>Coding and Web development</li>
+            <li>Video games such as Valorant and Celeste</sli>
+            <li>Hiking</li>
+        </ul> -->
