--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- <link rel="icon" type="image/x-icon" href="PFP.jpg"> -->
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="container">
     <div class="header">
         <img class="pfp" src="PFP.jpg" alt="profile picture">
         <div class="personal-info">
@@ -17,28 +17,34 @@
             <a href="https://linkedin.com/in/will-graham-4623022a8" target="_blank"><img class="linkedinimg" src="https://img.icons8.com/ios-glyphs/30/linkedin-2--v2.png" alt="linkedin-2--v2"/></a>
         </div>
     </div>
-    <div class="content">
-        <div class="primary-col">
-            <div class="about-me">
-                <h2>About me</h2>
-            </div>
-            <div class="projects">
-                <h2>Personal Projects</h2>
-            </div>
-            <div class="experience">
-                <h2>Experience</h2>
-            </div>
-        </div>
 
-        <div class="side-col">
-            <div class="education">
-                <h2>Education</h2>
-            </div>
-            <div class="languages">
-                <h2>Languages</h2>
-            </div>
+
+    <div class="primary-col">
+        <div class="content-box about-me">
+            <h2>About me</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore excepturi qui facilis exercitationem quo quos fugit. Quisquam eum minus aliquam? Ea, consequatur! Illum odio voluptatem labore sapiente, ad nesciunt voluptate!Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi quis rerum ratione assumenda, excepturi aperiam eligendi temporibus nesciunt minus non totam perferendis sint pariatur inventore quibusdam officia. Distinctio, consequatur perferendis.Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, ea quasi ducimus repellendus quos id eos, facilis laudantium expedita neque vel voluptas magnam dolore hic enim delectus iste veniam illum.</p>
+        </div>
+        <div class="content-box projects middle-element">
+            <h2>Personal Projects</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet quaerat aspernatur perferendis laborum explicabo exercitationem unde veniam earum eius quasi porro, quo repudiandae. Rem perspiciatis vero sit obcaecati, beatae hic.</p>
+        </div>
+        <div class="content-box experience">
+            <h2>Experience</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis nesciunt minus velit fugit. Adipisci deserunt explicabo eius ex magnam? Enim repellendus labore commodi deserunt? Ipsam incidunt deleniti commodi possimus sed! Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus cum atque molestias totam, perspiciatis repellat molestiae unde corporis mollitia, vitae ab ipsa saepe fugit eum consequatur doloremque. Reiciendis, libero facere. Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque porro placeat deserunt, voluptas natus voluptates quisquam consectetur! Soluta asperiores numquam eos rem illum amet, quisquam, voluptatem voluptatum sunt, maxime eaque. Lorem ipsum dolor sit amet consectetur adipisicing elit. In repellendus ipsam explicabo laboriosam laborum similique hic laudantium quisquam repellat modi alias dignissimos, ad animi beatae facilis eveniet exercitationem dolorem quae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores quidem corrupti libero repellendus aspernatur id, quae quos, modi, porro deserunt totam dolore laudantium vel nulla unde? Quibusdam sapiente harum porro.Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, quasi quas sapiente ut nisi laboriosam commodi molestias. Necessitatibus sapiente libero vel repudiandae repellat veniam labore debitis omnis. Neque, in. Repudiandae!Lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa dolores, debitis reprehenderit dicta at exercitationem animi deserunt necessitatibus quas excepturi magni saepe placeat molestiae ipsam, accusamus esse vero molestias porro! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime recusandae unde repellendus cum iusto aliquam blanditiis, animi illum labore vel asperiores suscipit modi, fugit vitae? Debitis, aliquam. Rerum, unde suscipit? ipsum dolor sit amet consectetur adipisicing elit. Maiores distinctio maxime repellat nobis officia amet illum. Obcaecati ullam blanditiis, eaque odit inventore molestiae nemo, laboriosam, dolores distinctio velit quas corporis?</p>
         </div>
     </div>
+
+    <div class="side-col">
+        <div class="content-box education">
+            <h2>Education</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores dolores mollitia assumenda possimus id molestiae maxime veniam. Iste illum et dolore, dicta eius, ipsa quos repellat veniam voluptas blanditiis totam!</p>
+        </div>
+        <div class="content-box languages middle-element">
+            <h2>Languages</h2>
+        </div>
+    </div>
+
+
     <div class="footer"></div>
 </body>
 </html>
