Added some icons and animations

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Will Graham | Profile</title>
     <!-- <link rel="icon" type="image/x-icon" href="PFP.jpg"> -->
+    <script src="https://kit.fontawesome.com/a47a667860.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="container">
@@ -13,8 +14,18 @@
         <div class="personal-info">
             <h1>Will Graham</h1>
             <h2>Computer Science Major at The University of Maryland</h2>
-            <a href="https://github.com/WillGraham36"target="_blank"><img class="githubimg" src="https://img.icons8.com/ios-filled/50/github.png" alt="github"/></a>
-            <a href="https://linkedin.com/in/will-graham-4623022a8" target="_blank"><img class="linkedinimg" src="https://img.icons8.com/ios-glyphs/30/linkedin-2--v2.png" alt="linkedin-2--v2"/></a>
+            <ul class="social-media-icon-list">
+                <li class="item">
+                    <a href="https://github.com/WillGraham36"target="_blank">
+                        <i class="fa fa-github icon" aria-hidden="true"></i>
+                    </a>
+                </li>
+                <li class="item">
+                    <a href="https://linkedin.com/in/will-graham-4623022a8" target="_blank">
+                        <i class="fa fa-linkedin-square icon" aria-hidden="true"></i>
+                    </a>
+                </li>
+            </ul>
         </div>
     </div>
 
@@ -35,17 +46,31 @@
     </div>
 
     <div class="side-col">
-        <div class="content-box education">
+        <div class="content-box contacts">
+            <h2>Contact Me</h2>
+            <ul class="contact-list">
+                <li class="location contact-item">
+                    <i class="fa fa-map-marker fa-contact" aria-hidden="true"></i>
+                    <span>Pittsburgh, PA</span>
+                </li>
+                <li class="email contact-item">
+                    <i class="fa fa-envelope fa-contact" aria-hidden="true"></i>
+                    <a href="mailto:willgraham367@gmail.com">willgraham367@gmail.com</a>
+                </li>
+            </ul>
+        </div>
+        <div class="content-box education  middle-element">
             <h2>Education</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores dolores mollitia assumenda possimus id molestiae maxime veniam. Iste illum et dolore, dicta eius, ipsa quos repellat veniam voluptas blanditiis totam!</p>
         </div>
-        <div class="content-box languages middle-element">
-            <h2>Languages</h2>
+        <div class="content-box technical-skills middle-element" id="tech-skills">
+            <h2>Technical Skills</h2>
         </div>
     </div>
 
 
     <div class="footer"></div>
+    <script src="index.js"></script>
 </body>
 </html>
 
