Added skills and bars with animations for the skill bars

--- a/index.html
+++ b/index.html
@@ -59,12 +59,15 @@
                 </li>
             </ul>
         </div>
+        <div class="content-box technical-skills middle-element" id="tech-skills">
+            <h2>Technical Skills</h2>
+            <div class="skills-list">
+
+            </div>
+        </div>        
         <div class="content-box education  middle-element">
             <h2>Education</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores dolores mollitia assumenda possimus id molestiae maxime veniam. Iste illum et dolore, dicta eius, ipsa quos repellat veniam voluptas blanditiis totam!</p>
-        </div>
-        <div class="content-box technical-skills middle-element" id="tech-skills">
-            <h2>Technical Skills</h2>
         </div>
     </div>
 
@@ -73,13 +76,3 @@
     <script src="index.js"></script>
 </body>
 </html>
-
-<!--         
-    <h2>My name is Will, I'm a CS major at UMD</h2>
-        <p>Some things im interested in include:</p>
-        <ul>
-            <li>Ultimate Frisbee</li>
-            <li>Coding and Web development</li>
-            <li>Video games such as Valorant and Celeste</sli>
-            <li>Hiking</li>
-        </ul> -->
